design page nav

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
                 <div class="info-content">
                     <h1 class="name" title="Caroline Kays">Caroline Kays</h1>
                     <div class="titles">
-                        <p class="title">Software & VR Developer</p>
+                        <p class="title">Software Developer</p>
                         <p class="title">UI/UX Designer</p>
-                        <p class="title">Tech Blogger</p>
+                        <p class="title">Brand Manager</p>
+                        <p class="title">Content Creator</p>
                     </div>
                 </div>
 
@@ -78,7 +79,7 @@
                 <ul class="social-list">
                     <li class="social-item"><a href="https://github.com/CarolineKYZ" class="social-link"><ion-icon name="logo-github"></ion-icon></a></li>
                     <li class="social-item"><a href="https://www.linkedin.com/in/carolinekays/" class="social-link"><ion-icon name="logo-linkedin"></ion-icon></a></li>
-                    <li class="social-item"><a href="#" class="social-link"><ion-icon name="logo-steam"></ion-icon></a></li>
+                    <li class="social-item"><a href="https://steamcommunity.com/profiles/76561198106286360/" class="social-link"><ion-icon name="logo-steam"></ion-icon></a></li>
                 </ul>
             </div>
         </aside>
@@ -113,8 +114,8 @@
                             </div>
 
                             <div class="service-content-box">
-                                <h4 class="h4 service-item-title">Desktop applications</h4>
-                                <p class="service-item-text">The most modern and high-quality design made at a professional level.</p>
+                                <h4 class="h4 service-item-title">Desktop Applications</h4>
+                                <p class="service-item-text">My background as a computer scientist lends itself to my ability to program both front-end UI and back-end logic for applications.</p>
                             </div>
                         </li>
 
@@ -124,8 +125,8 @@
                             </div>
 
                             <div class="service-content-box">
-                                <h4 class="h4 service-item-title">Web development</h4>
-                                <p class="service-item-text">High-quality development of sites at the professional level.</p>
+                                <h4 class="h4 service-item-title">Web Development</h4>
+                                <p class="service-item-text">I can design sites at the professional level, for instance, the website you're looking at right now.</p>
                             </div>
                         </li>
 
@@ -135,8 +136,8 @@
                             </div>
 
                             <div class="service-content-box">
-                                <h4 class="h4 service-item-title">Mobile applications</h4>
-                                <p class="service-item-text">Professional development of applications for iOS and Android.</p>
+                                <h4 class="h4 service-item-title">UI/UX Design</h4>
+                                <p class="service-item-text">I have a keen eye and a creative edge that helps me develop UI soultions to various types of applications, and a knack for connecting functionality to end user needs. </p>
                             </div>
                         </li>
 
@@ -146,8 +147,8 @@
                             </div>
 
                             <div class="service-content-box">
-                                <h4 class="h4 service-item-title">VR applications</h4>
-                                <p class="service-item-text">I make high-quality photos of any category at a professional level.</p>
+                                <h4 class="h4 service-item-title">Content Creation</h4>
+                                <p class="service-item-text">I excel at producing various media formats like photography and videography to help companies with their digital marketing, branding, and online communication. </p>
                             </div>
                         </li>
                     </ul>
@@ -259,9 +260,9 @@
                 </section>
             </article>
 
-            <article class="portfolio " data-page="portfolio">
+            <article class="portfolio " data-page="programming">
                 <header>
-                    <h2 class="h2 article-title">Portfolio</h2>
+                    <h2 class="h2 article-title">Programming</h2>
                 </header>
 
                 <section class="projects">
@@ -719,9 +720,9 @@
                 </section>
             </article>
 
-            <article class="settings " data-page="settings">
+            <article class="design " data-page="design">
                 <header>
-                    <h2 class="h2 article-title">Settings</h2>
+                    <h2 class="h2 article-title">Design</h2>
                 </header>
             </article>
         </div>
