--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </header>
 
                 <section class="about-text">
-                    <p>I am a recent Fall 2024 graduate from beautiful Western Washington University (WWU), where I received my bachelor's degree in computer science. </p>
+                    <p>I am a recent December 2024 graduate from beautiful Western Washington University (WWU), where I received my bachelor's degree in computer science. </p>
                     <p>I enjoy working on projects where I can develop more accessible technology and let my creativity flow. I am a big team player, and I thrive in team settings where I can collaborate with others, create a positive work environment, and build group synergy.</p>
                 </section>
 
@@ -171,13 +171,13 @@
                         <li class="timeline-item">
                             <h4 class="h4 timeline-item-title">Western Washington University [WWU]</h4>
                             <span>2020 - 2024</span>
-                            <p class="timeline-text">While studying at WWU I learnt a wide range of topics that are essential to understanding both the theory and practical aspects of computing. This involves programming fundamentals, computer architecture, operating systems, databases, software engineering, problem solving, collaboration and communication soft skills.</p>
+                            <p class="timeline-text">While studying at WWU I learnt a wide range of topics that are essential to understanding both the theory and practical aspects of computing. This involves programming fundamentals, computer architecture, operating systems, databases, software engineering, problem solving, collaboration and communication soft skills. I participated as a peer mentor advisor to pre-majors, and competed in school hosted programming competitions. </p>
                         </li>
 
                         <li class="timeline-item">
                             <h4 class="h4 timeline-item-title">Eastside Preparatory School [EPS]</h4>
                             <span>2015 - 2020</span>
-                            <p class="timeline-text">Returning to the United States, I attened a private independent college prep school, where I founded a service-based club aimed at aiding teens and families experiencing homelessness. Additionally, I took part in a meriad of sports, eventually becoming the varsity captain of our girls volleyball team.</p>
+                            <p class="timeline-text">Returning to the United States, I attened a private independent college prep school, where I founded a service-based club aimed at aiding teens and families experiencing homelessness. Annually our club raised 300 pounds of hygiene products for local non-profits. Additionally, I took part in a meriad of sports, eventually becoming the varsity captain of our girls volleyball team.</p>
                         </li>
 
                         <li class="timeline-item">
