added to deisgn info

--- a/index.html
+++ b/index.html
@@ -749,41 +749,60 @@
                                 <p class="modal-p"><i> A mobile parking application for Western Washington University, giving WWU commuters a better understanding of parking avilability on campus. </i> </p>
                             
                                 <br><hr><br>
-                                <p class="modal-b"><b>Problem:</b> Finding reliable parking on campus during peak school hours is an issue that plagues WWU students and guests alike. Knowing which lots are already full and which have spaces still available can be a struggle. Which can result in unnecessary lateness or tardiness to events and classes on campus.</p><br>
-                                <p class="modal-b"><b>Solution:</b> Through the use of newly installed parking lot cameras with image detection software, and a new mobile parking application for Western Washington University, these problems can be alleviated.  </p> <br>
-                                <p class="modal-b">The proposed technology relies upon cameras that track available parking lot spaces and also provide users with a live feed of parking lots. Giving them a better visual indicator, along with metric data, of how crowded certain lots are. The mobile parking application gives users a live camera feed and number of available parking spaces for each parking lot on campus. These parking lots are sorted between student, guest, and faculty parking, so the experience is tailored to each of these user groups. </p><br>
-                                <p class="modal-b"><b>Technologies:</b> Figma</p>
+                                <div>
+                                    <h4 class="sub-title"><mark>Technologies:</mark></h4>
+                                    <p class="modal-b" style="display: inline;">Figma.</p>
+                                    <br><br>
+                                </div>
+
+                                <div>
+                                    <h4 class="sub-title"><mark>Users:</mark></h4>
+                                    <p class="modal-b" style="display: inline;">WWU Students, Guests, and Faculty.</p>
+                                    <br><br>
+                                </div>
+
+                                <div>
+                                    <h4 class="sub-title"><mark>Problem:</mark></h4>
+                                    <p class="modal-b" style="display: inline;">Finding reliable parking on campus during peak school hours is an issue that plagues WWU students and guests alike. <b>Knowing which lots are already full and which have spaces still available can be a struggle</b>. Which can result in unnecessary lateness or tardiness to events and classes on campus.</p>
+                                    <br><br>
+                                </div>
+
+                                <div>
+                                    <h4 class="sub-title"><mark>Solution:</mark></h4>
+                                    <p class="modal-b" style="display: inline;">Through the use of newly installed parking lot cameras with image detection software, and a new mobile parking application for Western Washington University, these problems can be alleviated. <b>The proposed technology relies upon cameras that track available parking lot spaces </b> and also provide users with a live feed of parking lots. Giving them a better visual indicator, along with metric data, of how crowded certain lots ares. <b>The mobile parking application gives users a live camera feed and number of available parking spaces for each parking lot on campus </b>. These parking lots are sorted between student, guest, and faculty parking, so <b>the experience is tailored</b> to each of these user groups.</p>
+                                    <br><br>
+                                </div>
                                 <br><hr><br>
 
-                                <p class="modal-h">Wireframes</p>
+                                <p class="modal-h">WIREFRAMES</p>
                                 <div style="display: flex; justify-content: center; gap: 25px;">
                                     <img style="width: 120px; border: 5px solid #555;" src="images/home wireframe.JPG" alt="">
                                     <img style="width: 120px; border: 5px solid #555;" src="images/parking wireframe.JPG" alt="">
                                     <img style="width: 120px; border: 5px solid #555;" src="images/map wireframe.JPG" alt="">
                                 </div>
 
-                                <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+                                <p style="margin-bottom: 30px;" class="top-buffer">The design was created initially using a wireframe to develop a low-fidelity mockup of the necessary features, pages, navigation, and components for the next design iteration. In this wireframe, the homepage, parking, and map pages were planned out, creating a flow between the main homepage and to the subpages of the system. The notice page was created later, after the inital wireframes. </p>
 
-                                <p class="modal-h">Branding</p>
+                                <p class="modal-h">BRANDING</p>
                                 <img style="width: 300px; display: block; margin: auto;" src="images/wwu site.JPG"><br>
                                 <img style="width: 300px; display: block; margin: auto;" src="images/brand.JPG">
-                                <p class="top-buffer">As I progressed towards designing the application, I needed to ensure that the design was cohesive with WWU's existing branding. After some initial research, I identified the following colors and fonts for use in the application. </p> 
+                                <p class="top-buffer">As the application is tied to the existing brand entity of Western Washington University, I needed to ensure that the design looked and felt like it belonged to WWU's trademark by following in cohesive design. After some research of their websites and designs, I identified specific colors (light green, blues, white) and fonts (montserrat, Fira Sans) for use in the application. </p> 
 
-                                <p class="modal-h">Home Screen Design</p>
+                                <p class="modal-h">HOME SCREEN</p>
                                 <img style="width: 200px; float: left; margin-right: 15px;" src="images/iMockup - home.png" alt="">
                                 <p style="margin-bottom: 100px;" class="top-buffer">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                                 
-                                <p class="modal-h">Parking Screen Design</p>
+                                <p class="modal-h">PARKING SCREEN</p>
                                 <img style="width: 200px; float: left; margin-right: 35px;" src="images/iMockup - park.png" alt="">
                                 <img style="width: 200px; float: right; margin-left: 35px;" src="images/iMockup - park mobile.png">
 
                                 <p style="margin-bottom: 20px;" class="top-buffer">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
 
-                                <p class="modal-h">Second Design Iteration</p>
+                                <p class="modal-h">PARKING MAP</p>
                                 <img style="width: 200px; float: right; margin-left: 35px;" src="images/iMockup - map.png" alt="">
                                 <p style="margin-bottom: 60px;" class="top-buffer">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
 
-                                <p class="modal-h">Third Design Iteration</p>
+                                <p class="modal-h">PARKING NOTICES</p>
                                 <img style="width: 200px; float: left; margin-right: 35px;" src="images/iMockup - notcies.png" alt="">
                                 <p style="margin-bottom: 20px;" class="top-buffer">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
 
