--- a/blogC.html
+++ b/blogC.html
@@ -87,26 +87,20 @@
         <div class="main-content">
             <article class="about active" data-page="about">
                 <header>
-                    <h2 class="h2 article-title">A New CS Graduate</h2>
+                    <h2 class="h2 article-title">Competing In My First Programming Competition</h2>
                 </header>
 
                 <figure class="blog-banner-box">
-                    <img src="images/blog-2.jpg" alt="Design conferences in 2024" loading="lazy">
+                    <img src="images/blog-4.jpg" loading="lazy">
                 </figure>
 
                 <p class="blog-p">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
 
-                <img class="image" style="width: 400px; float: left; margin-right: 5px; border-radius: 25px;" src="images/DSC_0706.JPG" alt="">
-                <img class="image" style="width: 400px; float: right; margin-left: 5px; border-radius: 25px;" src="images/DSC_0731.JPG">
+                <img class="image" style="width: 400px; float: left; margin-right: 5px; border-radius: 25px; margin-bottom: 15px;" src="images/blog-5.jpg" alt="">
+                <img class="image" style="width: 400px; float: right; margin-left: 5px; border-radius: 25px; margin-bottom: 15px;" src="images/blog-6.jpg">
 
                 <p class="blog-p">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p> 
-
-                <p class="blog-p">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p> 
-
-                <img class="image" style="width: 400px; float: left; margin: 5px; margin-bottom: 30px; border-radius: 25px;" src="images/IMG_1104.jpg" alt="">
-                <img class="image" style="width: 400px; float: right; margin: 5px; margin-bottom: 30px; border-radius: 25px;" src="images/IMG_1165.jpg">
-
-                
+             
                 <a href="index.html" class="button">
                 <button style="font-size: 40px; color: black;" class="modal-close-btn" data-modal-close-btn>&times;</button>
                 </a>
