--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </header>
 
                 <section class="about-text">
-                    <p>I am a recent December 2024 graduate from beautiful <em>Western Washington University (WWU)</em>, where I received my bachelor's degree in computer science. </p>
+                    <p>I am a December 2024 graduate from beautiful <em>Western Washington University (WWU)</em>, where I received my bachelor's degree in computer science. </p>
                     <p>I enjoy working on projects where I can develop more accessible technology and let my creativity flow. I am a big team player, and I thrive in team settings where I can collaborate with others, create a positive work environment, and build group synergy.</p>
                 </section>
 
