--- a/blogA.html
+++ b/blogA.html
@@ -91,7 +91,7 @@
                 </header>
 
                 <figure class="blog-banner-box">
-                    <img src="images/blog-2.jpg" alt="Design conferences in 2024" loading="lazy">
+                    <img src="images/blog-2.jpg" alt="" loading="lazy">
                 </figure>
 
                 <p class="blog-p">Graduating during the tumultuous start of COVID-19 was nothing short of a rollercoaster. The four years of college, which typically include bustling campus life, in-person lectures, and face-to-face collaboration, suddenly transformed into a virtual experience. Navigating classes through screens, adapting to remote learning, and missing out on the traditional college social scene created an entirely new set of challenges. Yet, amidst the uncertainty, it also fostered resilience, adaptability, and a deeper appreciation for the moments of connection that persisted online. The journey was marked by countless late-night study sessions, Zoom study groups, and a relentless pursuit of knowledge despite the physical distance from peers and mentors.  </p>
