--- a/blogD.html
+++ b/blogD.html
@@ -87,22 +87,20 @@
         <div class="main-content">
             <article class="about active" data-page="about">
                 <header>
-                    <h2 class="h2 article-title">Being A Student Embassador</h2>
+                    <h2 class="h2 article-title">AI Can't Always Help You</h2>
                 </header>
 
                 <figure class="blog-banner-box">
-                    <img src="images/blog-1.jpg" loading="lazy">
+                    <img src="images/blog-3.png" loading="lazy">
                 </figure>
 
                 <p class="blog-p">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
 
-                <img class="image" style="width: 400px; float: left; margin-right: 5px; border-radius: 25px; margin-bottom: 15px;" src="images/hall1.jpg" alt="">
-                <img class="image" style="width: 400px; float: right; margin-left: 5px; border-radius: 25px; margin-bottom: 15px;" src="images/hall3.jpg">
+                <img class="image" style="width: 600px; display: block; margin: auto; border-radius: 25px;" src="images/green flap.png" alt="">
 
                 <p class="blog-p">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p> 
                 
-                <img class="image" style="width: 600px; display: block; margin: auto; border-radius: 25px;" src="images/hall2.jpg" alt="">
-
+               
                 <a href="index.html" class="button">
                 <button style="font-size: 40px; color: black;" class="modal-close-btn" data-modal-close-btn>&times;</button>
                 </a>
