--- a/blogE.html
+++ b/blogE.html
@@ -91,18 +91,18 @@
                 </header>
 
                 <figure class="blog-banner-box">
-                    <img src="images/blog-1.jpg" loading="lazy">
+                    <img src="images/blog-7.jpg" loading="lazy">
                 </figure>
 
                 <p class="blog-p">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
 
-                <img class="image" style="width: 400px; float: left; margin-right: 5px; border-radius: 25px; margin-bottom: 15px;" src="images/hall1.jpg" alt="">
-                <img class="image" style="width: 400px; float: right; margin-left: 5px; border-radius: 25px; margin-bottom: 15px;" src="images/hall3.jpg">
+                <img class="image" style="width: 350px; float: left; margin-left: 35px;  border-radius: 25px; margin-bottom: 15px;" src="images/blog-8.jpg" alt="">
+                <img class="image" style="width: 350px; float: right; margin-right: 35px;  border-radius: 25px; margin-bottom: 15px;" src="images/blog-9.jpg">
 
-                <p class="blog-p">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p> 
-                
-                <img class="image" style="width: 600px; display: block; margin: auto; border-radius: 25px;" src="images/hall2.jpg" alt="">
-
+                <p class="blog-p" style="margin-top: 540px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p> 
+                <p class="blog-p"> (1) At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi. </p>
+                <p class="blog-p"> (2) Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id. </p>
+                <p class="blog-p"> (3) Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat. </p>
                 <a href="index.html" class="button">
                 <button style="font-size: 40px; color: black;" class="modal-close-btn" data-modal-close-btn>&times;</button>
                 </a>
